Fix bugs reported by Hudson find bugs